# spiridon

./: setup.py
kaled/: pyproject.toml  setup.py
kaled-contrib/kaled-documents-thal/: pyproject.toml
kaled-contrib/kaled-documents-thal/src/: requirements.txt  setup.py
kaled-contrib/kaled-documents-thal/src/kaled/documents/: __init__.py  thal_doc.py  thal_doc_factory.py
kaled-contrib/kaled-documents-thal/src/kaled/documents/thal/: __init__.py  thal_doc.py
kaled/kaled/: __init__.py  kaled_core.py
kaled/src/: requirements.txt  setup.py
kaled/src/kaled/documents/: __init__.py  document_factory.py  kaled-document-factory.json  kaled_doc.py  kaled_doc_factory.py  schema.py
kaled/src/kaled/documents/kaled/: __init__.py  kaled_doc.py
thal/: pyproject.toml  setup.py
thal/src/: requirements.txt  setup.py
thal/src/thal/: thal_core.py
thal/thal/: __init__.py
